apps/framework-cli/deploy/kubernetes/config-files/moose-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moosedeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moosedeploy
  template:
    metadata:
      labels:
        app: moosedeploy
        ver: v1
    spec:
      containers:
        - name: moosedeploy
          image: cjus514/moose-df-deployment-x86_64-unknown-linux-gnu:0.3.140
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: moose-repo-credentials
