apps/framework-cli/deploy/kubernetes/config-files/moose-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
spec:
  selector:
    app: moosedeploy
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
  type: LoadBalancer
